[fix]works-hatome-sh z-indexの調整

--- a/src/components/organisms/works/hatomeFriends/Visuals/style.module.scss
+++ b/src/components/organisms/works/hatomeFriends/Visuals/style.module.scss
@@ -3,6 +3,8 @@
 @import 'styles/common/variable';
 
 .wrapper {
+  z-index: -1;
+
   .swiper_wrapper {
     display: flex;
 
